# meeting-contact-extraction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
cdk/: cdk.py  stack.py
example/: contact_schema.json  transcript.webvtt  zoom_meeting.json
src/: client.py  constants.py  templates.py  utils.py
src/summarizer/: chain.py
tests/: test_chain.py
